# VexEngine

./: .gitignore  CMakeLists.txt  README.md  VexEngine.sln  VexEngine.vcxproj  VexEngine.vcxproj.filters  compile.bat  first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  notes.txt  simple_render_system.cpp  simple_render_system.h  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv  vex_buffer.cpp  vex_buffer.h  vex_camera.h  vex_descriptor.cpp  vex_descriptors.h  vex_device.cpp  vex_device.h  vex_frame_info.h  vex_game_object.h  vex_model.cpp  vex_model.h  vex_pipeline.cpp  vex_pipeline.h  vex_renderer.cpp  vex_renderer.h  vex_swap_chain.cpp  vex_swap_chain.h  vex_window.cpp  vex_window.h
rnotes/: Understanding the swapchain.rnote
shaders/: simple_shader.frag  simple_shader.vert
src/: Makefile  VulkanTest  first_app.cpp  first_app.h  main.cpp  old.Makefile  simple_render_system.cpp  simple_render_system.h  vex_camera.cpp  vex_device.h  vex_game_object.cpp  vex_model.h  vex_pipeline.cpp  vex_pipeline.h  vex_swap_chain.cpp  vex_utils.h
src/core/: Application.cpp  Application.hpp  application.cpp  application.hpp  game_object.hpp  myth_camera.cpp  myth_camera.hpp  myth_engine.cpp  myth_engine.d  myth_engine.hpp  myth_game_object.hpp  myth_renderer.cpp  myth_renderer.hpp
src/graphics/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  VulkanDevice.cpp  VulkanDevice.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  mesh.cpp  mesh.hpp  myth_engine_device.cpp  myth_engine_device.hpp  myth_engine_swap_chain.cpp  (+13 more)
(+14 files in other folders)
